# smile

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  project.vim
cmake/modules/: FindNUMA.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.h  error.cpp  error.h  macros.h  platform.cpp  platform.h  types.h  types_traits.h  types_utils.cpp  types_utils.h
src/common/: CMakeLists.txt  platform.cpp  platform.h  types.h
src/data/: CMakeLists.txt  index.h  schema.cpp  schema.h  table.h  types.cpp  types.h
src/memory/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_pool.cpp  buffer_pool.h  types.h
src/regtests/: CMakeLists.txt  System.h  alloc_regtest.cpp  bfsgraph_regtest.cpp  groupby_array_regtest.cpp  groupby_regtest.cpp  hashjoin_regtest.cpp  loadgraph_regtest.cpp  performance_regtest.cpp  scan_regtest.cpp  scanfilter_regtest.cpp
src/scripts/: plot_performance_regtest.py  plot_performance_regtest.sh
src/storage/: CMakeLists.txt  error.h  file_storage.cpp  file_storage.h  sequential_storage.h  storage.h  types.h
src/storage/tests/: CMakeLists.txt  file_storage_test.cpp
src/tasking/: CMakeLists.txt  sync_counter.cpp  sync_counter.h  task.h  task_pool.cpp  task_pool.h  tasking.cpp  tasking.h
src/tests/: CMakeLists.txt  buffer_pool_test.cpp  file_storage_test.cpp  schema_test.cpp  tasking_test.cpp
